<resources>
    <string name="app_name">Expense Logger</string>
    <string name="calendar_toolbar">Calendar</string>
    <string name="add_new_category">+ New Category</string>
    <string name="analysis_toolbar">Analysis</string>
    <string name="setting_toolbar">Settings</string>
    <string name="expense_details">Expense Details</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="new_expense">New Expense</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_note">Note</string>
    <string name="hint_category">Category</string>
    <string name="hint_date">Date</string>
    <string name="save">Save</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="pie_chart_toolbar">Monthly Expense Category Breakdown</string>
    <string name="bar_chart_toolbar">Yearly Expense Overview</string>
    <string name="pie_chart_description">Pie chart showing the percentage amount spent in each category this month</string>
    <string name="bar_chart_description">Bar chart showing the amount spent each month this year</string>
    <string name="bar_chart_yaxis_title">Amount spent</string>
    <string name="list_toolbar">All Expenses</string>
    <string name="hint_search">Search expense note</string>
    <string name="settings_budget">Budget setting</string>
    <string name="budget_edittext">Monthly budget</string>
    <string name="budget">Budget</string>
    <string name="add_category_uppercase">Add New Category</string>
    <string name="add_category">Add new category</string>
    <string name="modify_category">Modify category</string>
    <string name="delete_category">Delete category</string>
    <string name="category_name">Category Name</string>

</resources>
