<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/hint_category">

        <EditTextPreference
            android:key="add_category_preference"
            android:title="@string/add_category"
            android:dialogTitle="@string/category_name">

        </EditTextPreference>

        <ListPreference
            android:key="modify_category_preference"
            android:title="@string/modify_category"
            android:dialogTitle="@string/modify_category">

        </ListPreference>

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/delete_category"
            android:dialogTitle="@string/budget_edittext">

        </EditTextPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/budget">

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/settings_budget"
            android:dialogTitle="@string/budget_edittext">

        </EditTextPreference>

    </PreferenceCategory>

</PreferenceScreen>