<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bar_chart_toolbar"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@android:color/white"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="50dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/prevYear"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:tint="@color/colorLight"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/barChartDate"
            android:text="2017"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1.2"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/nextYear"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_gravity="center_horizontal"
            android:tint="@color/colorLight"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.yujotseng.expenselogger.VerticalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_chart_yaxis_title"
            android:textSize="10sp"
            android:textColor="@color/colorDark"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"/>

        <com.github.mikephil.charting.charts.BarChart
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/barChart">

        </com.github.mikephil.charting.charts.BarChart>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar_chart_description"
        android:textSize="11sp"
        android:textColor="@color/colorDark"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>